--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,12 +12,17 @@
   <script src="lib/jasmine-3.1.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Player.js"></script>
-  <script src="src/Song.js"></script>
+  <script src="src/RecursionSolver.js"></script>
 
+  <!-- include spec util files here... -->
+  <script src="spec/Parser.js"></script>
+  <script src="spec/rule.js"></script>
+  
+  <!-- include spec util files here... -->
+  <script src="spec/spec_accept.js"></script>
+  
   <!-- include spec files here... -->
-  <script src="spec/SpecHelper.js"></script>
-  <script src="spec/PlayerSpec.js"></script>
+  <script src="spec/left_recursion.js"></script>
 
 </head>
 
